Fix : Finalisation de la spec open api
